[package]
name = "rnotifyd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rnotifyd"
path = "src/main.rs"

[lib]
name = "rnotifydlib"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.14"
toml = "0.5.9"
rnotify = { git = "https://github.com/tyhdefu/rnotify.git" }
getopts = "0.2.21"
futures = { version = "0.3.25", default-features = false, features = ["executor"]}

tokio = { version = "1.21.0", features = ["macros", "time", "rt-multi-thread", "signal", "net", "sync"] }
chrono = { version = "0.4.22", features = ["serde"] }
inflections = "1.1.1"
num-traits = "0.2.15"

log = "0.4.17"
env_logger = "0.10.0"